fix: add active prop to tooltip component and increase z-index for better visibility

--- a/src/styles/_tooltip.scss
+++ b/src/styles/_tooltip.scss
@@ -18,7 +18,7 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    z-index: 100;
+    z-index: 1000;
 
     &--top {
       bottom: calc(100% + attr(data-offset px));
